--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 21 08:05:07 2018</p>
+         Last Run: Wed Nov 21 09:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -38,11 +38,11 @@
                         <td>0</td>
                         <td>16</td>
                         <td>SSW</td>
-                        <td>71</td>
+                        <td>60</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>2</td>
                         <td>-2</td>
                         <td>1</td>
@@ -50,19 +50,19 @@
                         <td>0</td>
                         <td>14</td>
                         <td>SSW</td>
-                        <td>68</td>
+                        <td>56</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>2</td>
-                        <td>-2</td>
+                        <td>Partly Cloudy</td>
                         <td>1</td>
-                        <td>62</td>
+                        <td>-3</td>
+                        <td>1</td>
+                        <td>63</td>
                         <td>0</td>
                         <td>13</td>
                         <td>SSW</td>
-                        <td>67</td>
+                        <td>51</td>
                      </tr>
                   </tbody>
                </table>
@@ -91,7 +91,7 @@
                "data":[
                  "-1",
                  "-2",
-                 "-2"
+                 "-3"
                ]
              },
              {
@@ -103,7 +103,7 @@
                "data":[
                  "3",
                  "2",
-                 "2"
+                 "1"
                ]
              }
            ]
@@ -173,7 +173,7 @@
                "data":[
                  "55",
                  "59",
-                 "62"
+                 "63"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "71",
-                 "68",
-                 "67"
+                 "60",
+                 "56",
+                 "51"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 21 08:05:07 2018</p>
+         Last Run: Wed Nov 21 09:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -249,11 +249,11 @@
                         <td>-1</td>
                         <td>-4</td>
                         <td>5</td>
-                        <td>66</td>
+                        <td>64</td>
                         <td>1</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>60</td>
+                        <td>62</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -261,7 +261,7 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>4</td>
-                        <td>60</td>
+                        <td>59</td>
                         <td>1</td>
                         <td>10</td>
                         <td>SSE</td>
@@ -289,7 +289,7 @@
                         <td>0</td>
                         <td>11</td>
                         <td>SSE</td>
-                        <td>31</td>
+                        <td>32</td>
                      </tr>
                   </tbody>
                </table>
@@ -403,8 +403,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "66",
-                 "60",
+                 "64",
+                 "59",
                  "57",
                  "59"
                ]
@@ -415,10 +415,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "60",
+                 "62",
                  "43",
                  "33",
-                 "31"
+                 "32"
                ]
              }
            ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 21 08:05:07 2018</p>
+         Last Run: Wed Nov 21 09:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -483,7 +483,7 @@
                         <td>1</td>
                         <td>-2</td>
                         <td>2</td>
-                        <td>56</td>
+                        <td>55</td>
                         <td>1</td>
                         <td>8</td>
                         <td>WNW</td>
@@ -620,7 +620,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "56",
+                 "55",
                  "52",
                  "51"
                ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 21 08:05:07 2018</p>
+         Last Run: Wed Nov 21 09:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -702,7 +702,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>71</td>
+                        <td>70</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -714,19 +714,19 @@
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>69</td>
+                        <td>68</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>-2</td>
-                        <td>-6</td>
+                        <td>-3</td>
+                        <td>-7</td>
                         <td>4</td>
                         <td>74</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>69</td>
+                        <td>68</td>
                      </tr>
                   </tbody>
                </table>
@@ -755,7 +755,7 @@
                "data":[
                  "-6",
                  "-6",
-                 "-6"
+                 "-7"
                ]
              },
              {
@@ -767,7 +767,7 @@
                "data":[
                  "-2",
                  "-2",
-                 "-2"
+                 "-3"
                ]
              }
            ]
@@ -846,9 +846,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "71",
-                 "69",
-                 "69"
+                 "70",
+                 "68",
+                 "68"
                ]
              }
            ]
