--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 21 11:05:02 2018</p>
+         Last Run: Wed Nov 21 12:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -30,27 +30,27 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>3</td>
                         <td>-1</td>
                         <td>0</td>
-                        <td>55</td>
+                        <td>56</td>
                         <td>0</td>
-                        <td>16</td>
+                        <td>18</td>
                         <td>SSW</td>
-                        <td>58</td>
+                        <td>68</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>2</td>
                         <td>-2</td>
                         <td>1</td>
-                        <td>60</td>
+                        <td>61</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>16</td>
                         <td>SSW</td>
-                        <td>54</td>
+                        <td>64</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -58,7 +58,7 @@
                         <td>1</td>
                         <td>-3</td>
                         <td>1</td>
-                        <td>65</td>
+                        <td>68</td>
                         <td>0</td>
                         <td>13</td>
                         <td>SSW</td>
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "55",
-                 "60",
-                 "65"
+                 "56",
+                 "61",
+                 "68"
                ]
              },
              {
@@ -182,8 +182,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "58",
-                 "54",
+                 "68",
+                 "64",
                  "51"
                ]
              }
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 21 11:05:02 2018</p>
+         Last Run: Wed Nov 21 12:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -245,51 +245,51 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>-1</td>
                         <td>-4</td>
                         <td>5</td>
-                        <td>64</td>
+                        <td>67</td>
                         <td>1</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>62</td>
+                        <td>50</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>0</td>
-                        <td>-3</td>
-                        <td>4</td>
-                        <td>59</td>
-                        <td>1</td>
-                        <td>10</td>
-                        <td>SSE</td>
-                        <td>43</td>
-                     </tr>
-                     <tr>
-                        <td>02:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>1</td>
-                        <td>-2</td>
-                        <td>4</td>
-                        <td>57</td>
-                        <td>0</td>
-                        <td>11</td>
-                        <td>SSE</td>
-                        <td>33</td>
-                     </tr>
-                     <tr>
-                        <td>03:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>0</td>
                         <td>-4</td>
                         <td>4</td>
-                        <td>59</td>
-                        <td>0</td>
+                        <td>62</td>
+                        <td>1</td>
                         <td>11</td>
                         <td>SSE</td>
                         <td>31</td>
+                     </tr>
+                     <tr>
+                        <td>02:00 PM</td>
+                        <td>Clear</td>
+                        <td>1</td>
+                        <td>-2</td>
+                        <td>4</td>
+                        <td>59</td>
+                        <td>0</td>
+                        <td>11</td>
+                        <td>SSE</td>
+                        <td>19</td>
+                     </tr>
+                     <tr>
+                        <td>03:00 PM</td>
+                        <td>Clear</td>
+                        <td>0</td>
+                        <td>-4</td>
+                        <td>4</td>
+                        <td>62</td>
+                        <td>0</td>
+                        <td>13</td>
+                        <td>SSE</td>
+                        <td>15</td>
                      </tr>
                   </tbody>
                </table>
@@ -318,7 +318,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-4",
-                 "-3",
+                 "-4",
                  "-2",
                  "-4"
                ]
@@ -403,10 +403,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "64",
+                 "67",
+                 "62",
                  "59",
-                 "57",
-                 "59"
+                 "62"
                ]
              },
              {
@@ -415,10 +415,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "62",
-                 "43",
-                 "33",
-                 "31"
+                 "50",
+                 "31",
+                 "19",
+                 "15"
                ]
              }
            ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 21 11:05:02 2018</p>
+         Last Run: Wed Nov 21 12:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -479,7 +479,7 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>1</td>
                         <td>-2</td>
                         <td>2</td>
@@ -487,11 +487,11 @@
                         <td>1</td>
                         <td>8</td>
                         <td>WNW</td>
-                        <td>51</td>
+                        <td>20</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>2</td>
                         <td>0</td>
                         <td>2</td>
@@ -499,19 +499,19 @@
                         <td>1</td>
                         <td>8</td>
                         <td>WNW</td>
-                        <td>46</td>
+                        <td>16</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>2</td>
                         <td>0</td>
                         <td>2</td>
-                        <td>51</td>
+                        <td>52</td>
                         <td>0</td>
-                        <td>8</td>
-                        <td>WNW</td>
-                        <td>43</td>
+                        <td>6</td>
+                        <td>NW</td>
+                        <td>15</td>
                      </tr>
                   </tbody>
                </table>
@@ -622,7 +622,7 @@
                "data":[
                  "56",
                  "52",
-                 "51"
+                 "52"
                ]
              },
              {
@@ -631,9 +631,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "51",
-                 "46",
-                 "43"
+                 "20",
+                 "16",
+                 "15"
                ]
              }
            ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 21 11:05:02 2018</p>
+         Last Run: Wed Nov 21 12:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -698,11 +698,11 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>4</td>
-                        <td>72</td>
+                        <td>74</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>71</td>
+                        <td>72</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -710,7 +710,7 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>4</td>
-                        <td>73</td>
+                        <td>74</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
@@ -722,7 +722,7 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>4</td>
-                        <td>74</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
@@ -835,9 +835,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "72",
-                 "73",
-                 "74"
+                 "74",
+                 "74",
+                 "75"
                ]
              },
              {
@@ -846,7 +846,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "71",
+                 "72",
                  "70",
                  "70"
                ]
